# task

./: .env  Cargo.toml  config.js  info.txt  package.json  server.js
routes/: ethRoute.js  index.js
src/: Trunk.toml  index.html  main.rs
src/HTML/: books.html  index.html
src/components/: book_form.rs  book_list.rs  mod.rs
src/handlers/: create_book.rs  delete_all_books.rs  delete_book.rs  get_all_books.rs  get_book_by_id.rs  index.rs  mod.rs  update_book.rs
src/models/: book.rs  mod.rs
