[package]
name = "task"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.6.0"
serde = { version = "1.0.202", features = ["derive"] }
serde_json = "1.0.117"
uuid = { version = "1.8.0", features = ["v4"] }
actix-files = "0.6.5"
reqwest = "0.12.4"
mongodb = { version = "2.0", features = ["tokio-runtime"] }
futures = "0.3"
tokio = { version = "1", features = ["full"] }
serde_bytes = "0.11.14"
bson = "2.10.0"
log = "0.4"


